--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
+    "json": "^11.0.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "server": "^1.0.38",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
